@@ -3,6 +3,7 @@ NEXT:
 ===============
 0005407: Implement rigorous test on setting of baseline average
 0005660: Online pedestal determination inaccurate after some DOM state changes
+0005987: Monitoring record decoder doesn't handle 2ndbuild format
 
 ==============================================================
 
